# tree-sitter-proto

./: Cargo.toml  package.json  pyproject.toml
.github/workflows/: ci.yml
bindings/python/tree_sitter_proto/: __init__.py
bindings/rust/: lib.rs
queries/: highlights.scm
