[package]
name = "tree-sitter-proto"
description = "proto grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "proto"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rewinfrey/tree-sitter-proto"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
